# expirement_1

./: README.md
backup/: custom_world.launch.py  navigation_sim.launch.py
backup of gazebo custom world launch/: device_log.odt  my_map.pgm  turtlebot3_epirement1.launch.py  turtlebot3_expirement1.world
backup of gazebo custom world launch/turtlebot3_expirement1/: model.config  model.sdf
backup of gazebo custom world launch/turtlebot3_expirement1/meshes/: expirement1map.stl
src/navigation_pkg/: CMakeLists.txt  package.xml
src/navigation_pkg/config/: mapping.rviz  my_map.pgm  my_map.yaml  nav2_params.yaml  turtlebot3.yaml
src/navigation_pkg/launch/: nav_manipulator.launch.py  navigation_sim.launch.py
src/navigation_pkg/scripts/: experiment_1_v1.py  manipulator.py  mobile_manip.py  monile_manip.py  multi_waypoint.py  single_goal_nav.py  test1.py  test2.py  test3.py
src/simulation_pkg/: CMakeLists.txt  package.xml
src/simulation_pkg/launch/: custom_world.launch.py
src/simulation_pkg/models/my_map/: model.sdf
src/simulation_pkg/models/my_map/meshes/: expirement1map.stl
src/simulation_pkg/worlds/: turtlebot3_expirement1.world  your_world.world
