<?xml version="1.0"?>
<package format="3">
  <name>simulation_pkg</name>
  <version>0.0.1</version>
  <description>Simulation package for TurtleBot3 in a custom Gazebo world</description>

  <maintainer email="sampatry8@gmail.com">Sam</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>turtlebot3_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
